Clean up the code and make it more readable